--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-    <form action="{% url 'accountapp:update' pk=user.pk %}" method="post">
+    <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
        {% csrf_token %}
         {{ form }}
         <input type="submit">
